--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.example.bo.nhatkyhoctiengnhat"
+        applicationId "app.learning.fantaster.nhatkyhoctiengnhat"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
