Prepare a foo-multiple-choice exam

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
 
         <activity android:name="app.learning.fantaster.nhatkyhoctiengnhat.TaoMoi" />
+        <activity android:name="app.learning.fantaster.nhatkyhoctiengnhat.JLPTExam" />
     </application>
 
 </manifest>
