--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
 
         <activity android:name="app.learning.fantaster.nhatkyhoctiengnhat.TaoMoi" />
-        <activity android:name="app.learning.fantaster.nhatkyhoctiengnhat.Exam" />
+        <activity android:name=".JLPTExam" />
     </application>
 
 </manifest>
